--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ Flask==3.1.2
 Flask-Login==0.6.3
 Bootstrap-Flask==2.5.0
 WTForms==3.2.1
+Flask-WTF==1.2.2
 blinker==1.9.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Werkzeug==3.1.3
 bcrypt==3.2.0
-requests==2.25.1
+requests>=2.31.0
 gunicorn==20.1.0
+SQLAlchemy==2.0.36
+psycopg[binary]==3.2.3
+alembic==1.13.3
